packages/fuels-macros/tests/ui/abigen/malformed_abi.rs
use fuels_macros::abigen;

abigen!(Contract(name = "SomeName", abi = r#"{}"#));

fn main() {}
